# singine

./: .gitattributes  .gitignore  .npmignore  CLAUDE.md  CODEX.md  MANIFEST.in  Makefile  README.md  build.gradle  build.xml  package.json  pom.xml  setup.py  singine-net.el
.meta/: sindoc.sindoc
ansible/: photo-test.yml
ballerina/: singine.bal
core/: .singine-dns  .singine-jvm  .singinerc  Makefile  README.md  build.gradle  build.xml  deps.edn  pom.xml  project.clj  tests.edn
data/: git-repos.json
docker/: Dockerfile.centos  Dockerfile.edge  Dockerfile.kernel  Dockerfile.lambda  Dockerfile.mail  Makefile  README.md  docker-compose.centos.yml  docker-compose.edge.yml  docker-compose.kernel.yml  docker-compose.mail.yml  docker-compose.messaging.yml  lambda_stub.py
docs/: Makefile  README.md  ai-access-governance.md  ai-policy-canonify.md  ai-session-dashboard.md  auth-and-model-cli.md  control-center.md  dataset-campaigns.md  dotfiles-control.md  farsi-font-proofing.md  git-rm-public-dir.md  idp-code-passthrough-architecture.md  idp-saml-web-sso.md  intranet-deploy-summary.md  intranet-deploy.md  knowyourai-sparql.md  personal-os-essay.md  platform-blueprint.md  realm-ops.md  singine-edge.xml  singine-mail.xml  singine-pg.xml  singine-web.md  spec-publication.xml  template-library.md  wikipedia-contrib.md  zip-neighborhood-demo.md
elisp/: singine-edge-datasource.el  singine-fa-proof.el  singine-mcp.el  singine-runtime.el
io.lutino.mcp/mcp-collibra/: pyproject.toml
io.lutino.mcp/mcp-collibra/src/: server.py
logo/: 21638-NTOVKE.ai  21638-NTOVKH.eps  (+18 more)
(+335 files in other folders)
