[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "singine-mcp-collibra"
version = "0.1.0"
description = "MCP server exposing Collibra REST operations — open-source edition"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
singine-mcp-collibra = "server:main"

[tool.pytest.ini_options]
testpaths = ["../../../py/tests"]
python_files = ["test_collibra*.py"]
